--- a/ak.ipynb
+++ b/ak.ipynb
@@ -10,12 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello from Asim\n"
+      "Hello from Asim\n",
+      "Hello World From asim\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello from Asim\")"
+    "print(\"Hello from Asim\")\n",
+    "print(\"Hello World From asim\")"
    ]
   }
  ],
